# todo-fast-react

./: README.md
react-todos/: package-lock.json  package.json
react-todos/src/: App.js
react-todos/src/components/: TodoForm.jsx  TodoItem.jsx  TodoList.jsx  TodoTab.jsx
react-todos/src/services/: todoService.js
todo/: main.py  pyproject.toml
todo/todo/models/: models.py
