[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Hamza Braim <hamza.braim@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.0"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
